# Adaptive_Geo_Knowledge_Extraction

./: .gitignore  README.md  main.py  pyproject.toml  server_geosciml.py  server_math.py  server_mindat.py  server_ocr.py  server_preprocessor.py  workflow_main.py  workflow_test.py
util/: geosciml_vocab_parser.py  geosciml_vocab_updater.py
